# uvc_biped

./: .gitattributes  .gitignore  README.md
sim/: CMakeLists.txt  CMakePresets.json  README.md  biped.cpp  biped.h  core.cpp  core.h  main_integration.cpp  main_integration.h
src/: CMakeLists.txt  CMakePresets.json  main.c  main.h  program.c  vcpkg-configuration.json  vcpkg.json
src/sys_null/: stubs.c
src/sys_null/include/: ad.h  dac.h  i2c.h  ics.h  kcb5.h  pio.h  timer.h  uart.h
src/sys_sim/: i2c.c  ics.c  sim_i2c.h  sim_ics.h  sim_uart.h  stubs.c  uart.c
src/sys_win/: i2c.c  stubs.c  timer.c  uart.c
src/tests/: CMakeLists.txt  i2c_mock.c  sys_stubs.c  test_angleRepresentations.c  test_angleRepresentations.h  test_keyCont.c  test_keyCont.h  test_main.c  test_main2.c  timer_mock.c  uart_mock.c
